css: consistent h1 padding, avoids a jump of the main navigation line when selecting the browser tab.
This is visible when there's no logo configured and the project's name is rendered in an h1 heading.

Problem report and fix contributed by Mikael Relbe.

Closes #9269.


git-svn-id: http://trac.edgewall.org/intertrac/log:/trunk@9654 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/htdocs/css/trac.css
+++ b/trac/htdocs/css/trac.css
@@ -114,13 +114,14 @@ label.disabled { color: #d7d7d7 }
 
 /* Header */
 #header hr { display: none }
-#header h1 { margin: 1.5em 0 -1.5em; }
+#header h1 { margin: 1.5em 0 -1.5em; padding: 0 }
 #header img { border: none; margin: 0 0 -3em }
 #header :link, #header :visited, #header :link:hover, #header :visited:hover {
  background: transparent;
  color: #555;
  margin-bottom: 2px;
  border: none;
+ padding: 0;
 }
 #header h1 :link:hover, #header h1 :visited:hover { color: #000 }
 
